# esp_rtc_master

./: README.md
ESP32-S3-LCD-Ev-Board/86box_demo/: sdkconfig  sdkconfig.old
ESP32-S3-LCD-Ev-Board/86box_smart_panel/: sdkconfig  sdkconfig.old
ESP32-S3-LCD-Ev-Board/lvgl_demos/: sdkconfig  sdkconfig.old
ESP32-S3-LCD-Ev-Board/rgb_avoid_tearing/: sdkconfig  sdkconfig.old
ESP32-S3-LCD-Ev-Board/smart_panel/: sdkconfig  sdkconfig.old
ESP32-S3-LCD-Ev-Board/usb_camera_lcd/: sdkconfig  sdkconfig.old
ESP32-S3-LCD-Ev-Board/usb_keyboard/: sdkconfig  sdkconfig.old
ESP32-S3-LCD-Ev-Board/usb_msc_file_sys/: CMakeLists.txt  sdkconfig  sdkconfig.old
adf_example/cli/: README.md  README_CN.md  sdkconfig
adf_example/dueros/: README.md  sdkconfig
adf_example/ota/: README.md  sdkconfig
door_bell/: 智能可视门铃.c
door_bell/main/: door_bell.c
du_components/: README.md
my_test_code/: README.md
my_test_code/Peephole/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old  智慧门铃的功能
my_test_code/Peephole/components/hardware_driver/: CMakeLists.txt  idf_component.yml
my_test_code/Peephole/components/hardware_driver/boards/esp32s3-korvo-2/: bsp_board.c
my_test_code/Peephole/components/hardware_driver/boards/include/: bsp_board.h  esp32_s3_korvo_2_v3_board.h
my_test_code/Peephole/main/: CMakeLists.txt  app_main.cpp  config.h  event_logic.cpp  event_logic.hpp  idf_component.yml
my_test_code/Peephole/main/app/: app_button.c  app_button.h  app_i2c.c  app_i2c.h  app_peripheral.c  app_peripheral.h  app_wifi.c  app_wifi.h
my_test_code/door_bell_1/: sdkconfig
(+344 files in other folders)
